tests/issues/test441.pl
:- initialization(main).

main :-
	Y = {[y}],
		write(ok), nl.
